--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,7 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <p>Email: developer@example.com</p>
-            <p>Phone: +123456789</p>
+            <p>Email: marcellocuci@gmail.com</p>
         </section>
     </main>
     <footer>
