--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,11 +17,18 @@
     </header>
     <main>
         <section>
-            <p>This is a placeholder for your privacy policy. Add your real privacy policy here.</p>
+            <h2>1. Introduction</h2>
+            <p>This website does not collect personal data from users. It may use functional tools or cookies for improving user experience, but no personal data is collected.</p>
+
+            <h2>2. Cookies</h2>
+            <p>At this time, this website does not use cookies for the collection of personal data. If cookies are used in the future, this page will be updated with the relevant information.</p>
+
+            <h2>3. Changes to Privacy Policy</h2>
+            <p>This Privacy Policy may be updated in the future. Any changes will be posted on this page.</p>
         </section>
     </main>
     <footer>
-        <p>© 2025 Developer Name. All rights reserved.</p>
+        <p>© 2025 Marcello Cuciniello. All rights reserved.</p>
     </footer>
 </body>
 </html>
