--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         </section>
         <section>
             <h2>My Apps</h2>
-            <p>List your apps here with descriptions and links to the app stores.</p>
+            <p><strong>Doodle Mate:</strong> Surprise your partner or a special friend with sweet drawings directly on their home screen, and receive theirs in return! Here's how it works:</p>
+            <ul>
+                <li>Draw directly in the app and send your creation in seconds.</li>
+                <li>Your partner instantly receives the drawings on their main screen.</li>
+            </ul>
+            <p><strong>Doodle Mate</strong> is the perfect way to add a touch of sweetness to your day. Tell them you miss them, tell them you love them! Download now and start drawing!</p>
         </section>
     </main>
     <footer>
