--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>This is a placeholder text about you as a developer. Update this content later.</p>
+            <p>This is a placeholder text about you as a developer.</p>
         </section>
         <section>
             <h2>My Apps</h2>
